--- a/templates/mycustomer.html
+++ b/templates/mycustomer.html
@@ -1,43 +1,36 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
-    <script src="/static/js/jquery-1.12.4.min.js"></script>
-</head>
-<body>
-<h3>我的客户</h3>
-<div class="container">
-    <div class="row">
-        <div class="col-md-9 col-md-offset-1">
-            <form action="" method="post">
-                {% csrf_token %}
-                <table class="table table-bordered table-striped">
-                    <thead>
-                    <tr>
-                        <th>姓名</th>
-                        <th>跟进日期</th>
-                        <th>跟进详情</th>
-                    </tr>
-                    </thead>
-                {% for customer_distrbute in customer_distrbute_list %}
-                    <tr>
-                    <td>{{ customer_distrbute.customer }}</td>
-                    <td>{{ customer_distrbute.date }}</td>
-                    <td>{{ customer_distrbute.get_status_display }}</td>
-                    </tr>
+{% extends 'base.html' %}
+{% block content %}
 
-                {% endfor %}
+    <h3>我的客户</h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-9 col-md-offset-1">
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <table class="table table-bordered table-striped">
+                        <thead>
+                        <tr>
+                            <th>姓名</th>
+                            <th>跟进日期</th>
+                            <th>跟进详情</th>
+                        </tr>
+                        </thead>
+                        {% for customer_distrbute in customer_distrbute_list %}
+                            <tr>
+                                <td>{{ customer_distrbute.customer }}</td>
+                                <td>{{ customer_distrbute.date }}</td>
+                                <td>{{ customer_distrbute.get_status_display }}</td>
+                            </tr>
 
-                    <tbody>
+                        {% endfor %}
 
-                    </tbody>
-                </table>
-            </form>
+                        <tbody>
+
+                        </tbody>
+                    </table>
+                </form>
+            </div>
+
         </div>
-
     </div>
-</div>
-</body>
-</html>
+{% endblock %}
