--- a/templates/score.html
+++ b/templates/score.html
@@ -1,70 +1,67 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
-    <script src="/static/js/jquery-1.12.4.min.js"></script>
-</head>
-<body>
-<h3>录入成绩</h3>
-<div class="container">
-    <div class="row">
-        <div class="col-md-9 col-md-offset-1">
-            <form action="" method="post">
-                {% csrf_token %}
-                <table class="table table-bordered table-striped">
-                    <thead>
-                    <tr>
-                        <th>学生姓名</th>
-                        <th>考勤</th>
-                        <th>成绩</th>
-                        <th>批语</th>
-                    </tr>
-                    </thead>
+{% extends 'base.html' %}
 
-                    <tbody>
-                    {% for study_record in study_record_list %}
+{% block content %}
+
+
+
+
+    <h3>录入成绩</h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-9 col-md-offset-1">
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <table class="table table-bordered table-striped">
+                        <thead>
                         <tr>
-                            <td>{{ study_record.student }}</td>
-                            <td>{{ study_record.get_record_display }}</td>
-                            <td style="width: 150px;padding: 10px 20px">
-                                <select name="score_{{ study_record.pk }}" class="form-control">
-                                    {% for item in score_choices %}
-                                        {% if study_record.score == item.0 %}
-                                            <option selected value="{{ item.0 }}">{{ item.1 }}</option>
-                                        {% endif %}
-                                        <option value="{{ item.0 }}">{{ item.1 }}</option>
+                            <th>学生姓名</th>
+                            <th>考勤</th>
+                            <th>成绩</th>
+                            <th>批语</th>
+                        </tr>
+                        </thead>
 
-                                    {% endfor %}
+                        <tbody>
+                        {% for study_record in study_record_list %}
+                            <tr>
+                                <td>{{ study_record.student }}</td>
+                                <td>{{ study_record.get_record_display }}</td>
+                                <td style="width: 150px;padding: 10px 20px">
+                                    <select name="score_{{ study_record.pk }}" class="form-control">
+                                        {% for item in score_choices %}
+                                            {% if study_record.score == item.0 %}
+                                                <option selected value="{{ item.0 }}">{{ item.1 }}</option>
+                                            {% endif %}
+                                            <option value="{{ item.0 }}">{{ item.1 }}</option>
 
-                                </select>
-                            </td>
-                            <td>
-                            {{ study_record.homework_note }}
-                                {% if study_record.homework_note %}
-                                    <textarea name="homework_note_{{ study_record.pk }}" id="" cols="30" rows="3"
-                                              class="form-control">
+                                        {% endfor %}
+
+                                    </select>
+                                </td>
+                                <td>
+                                    {{ study_record.homework_note }}
+                                    {% if study_record.homework_note %}
+                                        <textarea name="homework_note_{{ study_record.pk }}" id="" cols="30" rows="3"
+                                                  class="form-control">
                                     {{ study_record.homework_note }}
                                     </textarea>
-                                {% else %}
-                                    <textarea name="homework_note_{{ study_record.pk }}" id="" cols="30" rows="3"
-                                              class="form-control"></textarea>
-                                {% endif %}
+                                    {% else %}
+                                        <textarea name="homework_note_{{ study_record.pk }}" id="" cols="30" rows="3"
+                                                  class="form-control"></textarea>
+                                    {% endif %}
 
 
-                            </td>
+                                </td>
 
-                        </tr>
-                    {% endfor %}
+                            </tr>
+                        {% endfor %}
 
-                    </tbody>
-                </table>
-                <input type="submit" class="btn btn-success pull-right">
-            </form>
+                        </tbody>
+                    </table>
+                    <input type="submit" class="btn btn-success pull-right">
+                </form>
+            </div>
+
         </div>
-
     </div>
-</div>
-</body>
-</html>
+{% endblock %}
