--- a/templates/score_view.html
+++ b/templates/score_view.html
@@ -1,106 +1,102 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="/static/bootstrap/css/bootstrap.css">
-    <script src="/static/js/jquery-1.12.4.min.js"></script>
-    <script src="/static/charts/highcharts.js"></script>
-</head>
-<body>
-<h3>查看{{ student }}成绩</h3>
-<div class="container">
-    <div class="row">
-        <div class="col-md-9 col-md-offset-1">
-            <form action="" method="post">
-                {% csrf_token %}
-                <table class="table table-bordered table-striped">
-                    <thead>
-                    <tr>
-                        <th>班级</th>
-                        <th>班主任</th>
-                        <th>任课老师</th>
-                        <th>课程成绩</th>
-                    </tr>
-                    </thead>
+{% extends 'base.html' %}
 
-                    <tbody>
-                    {% for cls in class_list %}
+{% block content %}
+
+
+
+
+    <h3>查看{{ student }}成绩</h3>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-9 col-md-offset-1">
+                <form action="" method="post">
+                    {% csrf_token %}
+                    <table class="table table-bordered table-striped">
+                        <thead>
                         <tr>
-                            <td>{{ cls }}</td>
-                            <td>{{ cls.tutor }}</td>
-                            <td>
-                                {% for teacher in cls.teachers.all %}
-                                    <span>{{ teacher }}</span>
-                                {% endfor %}
-
-                            </td>
-                            <td><a class="check_chart" cid="{{ cls.pk }}" sid="{{ student.pk }}">点击查看</a>
-                            </td>
+                            <th>班级</th>
+                            <th>班主任</th>
+                            <th>任课老师</th>
+                            <th>课程成绩</th>
                         </tr>
-                    {% endfor %}
+                        </thead>
+
+                        <tbody>
+                        {% for cls in class_list %}
+                            <tr>
+                                <td>{{ cls }}</td>
+                                <td>{{ cls.tutor }}</td>
+                                <td>
+                                    {% for teacher in cls.teachers.all %}
+                                        <span>{{ teacher }}</span>
+                                    {% endfor %}
+
+                                </td>
+                                <td><a class="check_chart" cid="{{ cls.pk }}" sid="{{ student.pk }}">点击查看</a>
+                                </td>
+                            </tr>
+                        {% endfor %}
 
 
-                    </tbody>
-                </table>
-            </form>
+                        </tbody>
+                    </table>
+                </form>
 
-            <div id="container" style="min-width:400px;height:400px"></div>
+                <div id="container" style="min-width:400px;height:400px"></div>
+            </div>
+
         </div>
-
     </div>
-</div>
 
-<script type="text/javascript">
-    $('.check_chart').click(function () {
-        $.ajax({
-            url: '',
-            type: 'get',
-            data: {
-                cid: $(this).attr('cid'),
-                sid: $(this).attr('sid')
-            },
-            success: function (data) {
-{#                console.log(data)#}
-{#                console.log(data['day'])#}
-                //显示chart图表
-                var chart = Highcharts.chart('container', {
-                    chart: {
-                        type: 'line'
-                    },
-                    title: {
-                        text: '该学生的成绩记录'
-                    },
-                    subtitle: {
-                        text: '数据来源: WorldClimate.com'
-                    },
-                    xAxis: {
-                        categories: data['day']
-                    },
-                    yAxis: {
+    <script type="text/javascript">
+        $('.check_chart').click(function () {
+            $.ajax({
+                url: '',
+                type: 'get',
+                data: {
+                    cid: $(this).attr('cid'),
+                    sid: $(this).attr('sid')
+                },
+                success: function (data) {
+                    {#                console.log(data)#}
+                    {#                console.log(data['day'])#}
+                    //显示chart图表
+                    var chart = Highcharts.chart('container', {
+                        chart: {
+                            type: 'line'
+                        },
                         title: {
-                            text: '分数'
-                        }
-                    },
-                    plotOptions: {
-                        line: {
-                            dataLabels: {
-                                // 开启数据标签
-                                enabled: true
-                            },
-                            // 关闭鼠标跟踪，对应的提示框、点击事件会失效
-                            enableMouseTracking: true
-                        }
-                    },
-                    series: [{
-                        //name: 'alex',
-                        data: data['score']
-                    }]
-                });
+                            text: '该学生的成绩记录'
+                        },
+                        subtitle: {
+                            text: '数据来源: WorldClimate.com'
+                        },
+                        xAxis: {
+                            categories: data['day']
+                        },
+                        yAxis: {
+                            title: {
+                                text: '分数'
+                            }
+                        },
+                        plotOptions: {
+                            line: {
+                                dataLabels: {
+                                    // 开启数据标签
+                                    enabled: true
+                                },
+                                // 关闭鼠标跟踪，对应的提示框、点击事件会失效
+                                enableMouseTracking: true
+                            }
+                        },
+                        series: [{
+                            //name: 'alex',
+                            data: data['score']
+                        }]
+                    });
 
-            }
+                }
+            })
         })
-    })
-</script>
-</body>
-</html>
+    </script>
+{% endblock %}
